data/derived/comb/progs/unify/prog1534.ml.out
Characters 39-42:
  let _ = eval (Sine(Average(VarX,VarY)),0.3,0.3);;
                                         ^^^
Error: This expression has type float but an expression was expected of type
         int
